--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Uso de Git</h1>
     <h2>Subtitulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, unde?</p>
   </body>
 </html>
